<resources>
    <string name="app_name">InstaFlight</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="splash">splash</string>
    <string name="fb">Sign up with Facebook</string>
    <string name="twitter">Sign up with Twitter</string>
    <string name="gplus">Sign up with Google+</string>
    <string name="login">Login</string>
    <string name="title_activity_event">Event</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_speakers">Speakers</string>
    <string name="speaker">Speakers</string>
    <string name="event_images">Event images</string>
    <string name="venue_name">Venue</string>
    <string name="along">Along Muthithi road</string>
    <string name="direction">Directions</string>
    <string name="agenda">Agenda</string>
    <string name="info">Information</string>
    <string name="twitter2">Twitter Feed</string>
    <string name="name">Name</string>
    <string name="descr">Brief description</string>
    <string name="photo">Profile photo</string>
    <string name="twitterhandle">Twitter handle</string>
    <string name="day1">DAY 1</string>
    <string name="day2">DAY 2</string>
    <string name="twitter_feed_here">Twitter feed goes here</string>
    <string name="event_descr">The InstaFlight Conference 2015.</string>
    <string name="wifi">WIFI</string>
    <string name="title_activity_day1">Day1</string>
    <string name="agenda_day_one">A Week in the Life of a Fabric Developer
BRIAN SWIFT AND HEMAL SHAH Developing an app is a journey, as you try to go from concept to cash as fast as possible. You need to
        spend your time focused on building amazing user experiences rather than dealing with bug fixes or the stress of a new
        release. This talk will walk through a typical week of a developer, highlighting all of the ways you and your team can
        use Fabric to take your development quality and speed to the next level.</string>
    <string name="agenda_day_two">Growing and Monetizing Your App Using Twitter
JOHN EGAN Learn more about the lifecycle of building, maintaining, and monetizing an audience with Twitter developer tools.
        This session will include an overview of organic distribution products, the mobile app promotion suite for user acquisition,
        and monetization using the MoPub platform. The goal of this overview is providing the tools and best practices to help you
        turn your apps into a business.</string>

</resources>
