<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ellekay.lucie.instaflight.Agenda">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/agenda"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardview"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:id="@+id/name"
                android:text="@string/day1"
                android:layout_gravity="center_horizontal" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descr"
                android:text="@string/descr" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/twit"
                android:text="@string/twitterhandle" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
