<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_sign_up" tools:context="com.ellekay.lucie.instaflight.SignUp"
    android:background="@drawable/instag">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="108dp"
    android:id="@+id/linearLayout"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        android:id="@+id/button2"
        android:background="#65d8ef"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gplus"
        android:id="@+id/button3"
        android:background="#ef2121"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fb"
        android:id="@+id/button"
        android:background="#4358a5"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:id="@+id/logintext"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:layout_margin="5dp"
        android:textColor="#f80000"
        android:singleLine="true"
        android:textSize="25sp"
        android:background="#ecb6b6" />
</LinearLayout>
</RelativeLayout>
