<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_speakers" tools:context="com.ellekay.lucie.instaflight.Speakers">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/speaker"
        android:id="@+id/textView"
        android:layout_gravity="top|center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="114dp"
        android:layout_marginStart="114dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardview"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/photo"
                android:id="@+id/imageView"
                android:src="@drawable/speakers"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:id="@+id/name"
                android:text="@string/name"
                android:layout_below="@+id/descr"
                android:layout_toRightOf="@+id/imageView"
                android:layout_toEndOf="@+id/imageView" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descr"
                android:text="@string/descr"
                android:layout_below="@+id/twit"
                android:layout_alignLeft="@+id/twit"
                android:layout_alignStart="@+id/twit" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/twit"
                android:text="@string/twitterhandle"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView"
                android:layout_toEndOf="@+id/imageView" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
